# KYC

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt
app/: main.py
app/api/v1/: face.py  health.py  liveness.py  ocr.py  router.py  scoring.py  voice.py
app/core/: config.py  dependencies.py  lifespan.py  logging.py
app/face/: pipeline.py  preprocessing.py  quality.py
app/models/: model_registry.py
app/ocr/: driving_license_parser.py  evaluation.py  extractor.py  nic_parser.py  passport_parser.py  pipeline.py  preprocessing.py  sinhala_postprocess.py  tasks.py
app/schemas/: face.py  liveness.py  ocr.py  scoring.py  voice.py
app/services/: face_service.py  liveness_service.py  ocr_service.py  scoring_service.py  voice_service.py
app/workers/: redis_worker.py
datasets/annotations/: sample_nic.json  schema.json
scripts/: evaluate_ocr.py
scripts/dataset/: augment.py  fake_data.py  generate_driving_license.py  generate_nic.py  generate_passport.py
scripts/train/: finetune_paddleocr.py  prepare_paddleocr_dataset.py
tests/: conftest.py
tests/api/: test_health.py
tests/face/: test_face_endpoint.py  test_face_pipeline.py  test_face_quality.py
tests/ocr/: test_driving_license_parser.py  test_evaluation.py  test_nic_parser.py  test_ocr_endpoint.py  test_passport_parser.py  test_preprocessing.py
